# nano-banana

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/test-multi-image/: .flow.ui.oo.json  flow.oo.yaml
flows/test-text-to-image/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
slotflows/+slotflow#1/scriptlets/: +scriptlet#1.py
slotflows/+slotflow#2/: .slotflow.ui.oo.json
subflows/images-nano-banana-edit/: subflow.oo.yaml
subflows/local-image-nano-banana-edit/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/local-image-nano-banana-edit/scriptlets/: +scriptlet#1.py
subflows/nano-banana-images-edit/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/nano-banana-images-generate/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/test-nano-banana/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/url-images-nano-banana-edit/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/extract-request-id/: __init__.py  task.oo.yaml
tasks/nano-banana-edit/: __init__.py  task.oo.yaml
tasks/nano-banana-generate/: index.ts  task.oo.yaml
tasks/nano-banana-get-result/: __init__.py  task.oo.yaml
